# collegeworld

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
authentication/: forms.py  token.py  urls.py  views.py
college/: admin.py  forms.py  models.py  urls.py  views.py
college/migrations/: 0001_initial.py  0002_college_affiliated_type.py  0002_newsletter_college_image_usnews_timesofindia_qs_and_more.py  0003_degree_alter_newsletter_course.py  0003_stream_collegestream_collegedegree.py  0004_collegequestion.py  0005_userdetail_education.py  0006_alter_userdetail_gender.py  0007_counsellingdata.py  0008_alter_counsellingdata_number.py  0009_counsellingdata_message.py
collegeworld/: asgi.py  settings.py  urls.py  wsgi.py
core/: custom_tags.py  db.py
static/css/: style.css
static/js/: script.js
templates/auth/: account_activation_success.html  login.html  password_reset_email.html  register.html  reset_password.html  reset_password_complete.html  reset_password_form.html  reset_password_send.html  verification_email_send.html
templates/auth/layout/: app.html  auth_banner.html
templates/college/: add_education.html  add_profile.html  college.html  college_detail.html  college_list.html  home.html  navbar.html  profile.html  study_abroad.html
templates/college/layout/: app.html
