[tool.poetry]
name = "collegeworld"
version = "0.1.0"
description = ""
authors = ["Tariq Jamal <tariqjamal4267324@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2"
django-ckeditor = "^6.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
